# atcoder-docker

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  compose.yaml  create_contest.sh  login_bk.sh  renovate.json  requirements.txt  submit.sh  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: enable-dependabot-alerts.sh
docker/cpp/: Dockerfile
docker/duckdb/: Dockerfile
docker/go/: Dockerfile
docker/pypy/: Dockerfile  pyproject.toml
docker/python/: Dockerfile  pyproject.toml
docker/ruby/: Dockerfile  Gemfile
docker/rust/: Cargo.toml  Dockerfile
