[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"

[tool.poetry.group.dev.dependencies]
numpy = "1.24.1"
# scipy = "1.10.1"
networkx = "3.0"
sympy = "1.11.1"
sortedcontainers = "2.4.0"
more-itertools = "9.0.0"
shapely = "2.0.0"
bitarray = "2.6.2"
pulp = "2.7.0"
mpmath = "1.2.1"
pandas = "1.5.2"
z3-solver = "4.12.1.0"
# cppyy = "2.4.1"
# scikit-learn = "1.3.0"
ac-library-python = { git = "https://github.com/not522/ac-library-python", branch = "master" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"