[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"

[tool.poetry.group.dev.dependencies]
numpy = "1.24.1"
scipy = "1.10.1"
networkx = "3.0"
sympy = "1.11.1"
sortedcontainers = "2.4.0"
more-itertools = "9.0.0"
shapely = "2.0.0"
bitarray = "2.6.2"
pulp = "2.7.0"
mpmath = "1.2.1"
pandas = "1.5.2"
z3-solver = "4.12.1.0"
ortools = "9.5.2237"
setuptools = "66.0.0"
cppyy = "2.4.1"
polars = "0.15.15"
lightgbm = "3.3.1"
numba = "0.57.0"
scikit-learn = "1.5.0"
touch = "^2020.12.3" # atcoder installed version is 1.13.1
gmpy2 = "2.1.5"
ac-library-python = { git = "https://github.com/not522/ac-library-python", branch = "master" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"