[package]
name = "atcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
ac-library-rs = "=0.1.1"
alga = "=0.9.3"
amplify = "=3.14.2"
amplify_derive = "=2.11.3"
amplify_num = "=0.4.1"
argio = "=0.2.0"
ascii = "=1.1.0"
az = "=1.2.1"
bitset-fixed = "=0.1.0"
bitvec = "=1.0.1"
bstr = "=1.6.0"
btreemultimap = "=0.1.1"
counter = "=0.5.7"
easy-ext = "=1.0.1"
either = "=1.8.1"
fixedbitset = "=0.4.2"
getrandom = "=0.2.10"
glidesort = "=0.1.2"
hashbag = "=0.1.11"
im-rc = "=15.1.0"
indexing = "=0.4.1"
indexmap = "=2.0.0"
itertools = "=0.11.0"
itertools-num = "=0.1.3"
lazy_static = "=1.4.0"
libm = "=0.2.7"
maplit = "=1.0.2"
memoise = "=0.3.2"
multimap = "=0.9.0"
multiversion = "=0.7.2"
nalgebra = "=0.32.3"
ndarray = "=0.15.6"
num = "=0.4.1"
num-bigint = "=0.4.3"
num-complex = "=0.4.3"
num-derive = "=0.4.0"
num-integer = "=0.1.45"
num-iter = "=0.1.43"
num-rational = "=0.4.1"
num-traits = "=0.2.15"
omniswap = "=0.1.0"
once_cell = "=1.18.0"
ordered-float = "=3.7.0"
pathfinding = "=4.3.0"
permutohedron = "=0.2.4"
petgraph = "=0.6.3"
proconio = "=0.4.5"
rand = "=0.8.5"
rand_chacha = "=0.3.1"
rand_core = "=0.6.4"
rand_distr = "=0.4.3"
rand_hc = "=0.3.2"
rand_pcg = "=0.3.1"
recur-fn = "=2.2.0"
regex = "=1.9.1"
rustc-hash = "=1.1.0"
smallvec = "=1.11.0"
static_assertions = "=1.1.0"
superslice = "=1.0.0"
tap = "=1.0.1"
text_io = "=0.1.12"
varisat = "=0.2.2"
